[gd_scene load_steps=37 format=4 uid="uid://b6navctmugfe2"]

[ext_resource type="TileSet" uid="uid://1do7ydqohww" path="res://tileset.tres" id="1_4ogtq"]
[ext_resource type="PackedScene" uid="uid://xg6evqvx3gc1" path="res://scenes/miner.tscn" id="1_8xi8i"]
[ext_resource type="Material" uid="uid://dm4rlevqxr3m8" path="res://game_shader.tres" id="1_m4v0b"]
[ext_resource type="Script" path="res://scenes/tilemaps.gd" id="2_c7mqw"]
[ext_resource type="Script" path="res://scenes/game.gd" id="2_viod6"]
[ext_resource type="Texture2D" uid="uid://b1xr1mo43imbu" path="res://assets/rock_tilesheet_big.png" id="3_x5a02"]
[ext_resource type="Script" path="res://scenes/camera_2d.gd" id="6_2kbk2"]
[ext_resource type="PackedScene" uid="uid://blsb5no04kqj4" path="res://scenes/on_screen_ui.tscn" id="6_g0thl"]
[ext_resource type="AudioStream" uid="uid://c2gdcl00oh1ya" path="res://sound/ambient/Into Nothing.wav" id="8_mxerh"]
[ext_resource type="Script" path="res://scenes/noclip_cam.gd" id="8_pyqyd"]
[ext_resource type="AudioStream" uid="uid://ccfb78tn2654e" path="res://sound/ambient/Out With A Whimper.wav" id="9_nkbgo"]
[ext_resource type="PackedScene" uid="uid://0b8v22uc4rk6" path="res://scenes/trigger.tscn" id="10_7k8s7"]
[ext_resource type="AudioStream" uid="uid://xwnp0ih3jgne" path="res://sound/ambient/Robotic Critter A.wav" id="10_j2eln"]
[ext_resource type="AudioStream" uid="uid://nayjmnyo4y1d" path="res://sound/ambient/Strange Pulse.wav" id="10_rsb7j"]
[ext_resource type="AudioStream" uid="uid://kkfarptuo50u" path="res://sound/ambient/Scream Button A.wav" id="11_e7eiq"]
[ext_resource type="AudioStream" uid="uid://cyuwgf5hbw3bf" path="res://sound/ambient/What Was That A.wav" id="11_v3eec"]
[ext_resource type="AudioStream" uid="uid://ctajshwmobajw" path="res://sound/ambient/What Was That B.wav" id="12_3r8i4"]
[ext_resource type="AudioStream" uid="uid://kvlsm1yrwj64" path="res://sound/ambient/Sonar Bark.wav" id="12_s351w"]
[ext_resource type="AudioStream" uid="uid://qcw5bgjb88et" path="res://sound/ambient/Worm Hole Wind.wav" id="13_adlyo"]
[ext_resource type="AudioStream" uid="uid://bvc8p63l8oax2" path="res://sound/ambient/Whispering Ship.wav" id="13_robx6"]
[ext_resource type="Script" path="res://scenes/ambiance.gd" id="14_o84u8"]
[ext_resource type="AudioStream" uid="uid://cuyec5n3mkul8" path="res://sound/ambient/Clicker B.wav" id="18_dk3yd"]
[ext_resource type="AudioStream" uid="uid://cw451ghtykmpy" path="res://sound/ambient/Creak or Creature A.wav" id="19_5f5nl"]
[ext_resource type="AudioStream" uid="uid://bwqu2t65xvjeb" path="res://sound/ambient/Creak or Creature C.wav" id="20_khsg4"]
[ext_resource type="AudioStream" uid="uid://3vwugefnw6qc" path="res://sound/ambient/Creak or Creature D.wav" id="21_d55de"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_8jmxf"]
seed = 314
frequency = 0.2

[sub_resource type="FastNoiseLite" id="FastNoiseLite_uhi1g"]
seed = 4214
frequency = 0.03

[sub_resource type="FastNoiseLite" id="FastNoiseLite_ghgpf"]
noise_type = 2
seed = 13298
frequency = 0.05

[sub_resource type="Curve" id="Curve_1p4w3"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_lj8t0"]
curve = SubResource("Curve_1p4w3")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_onh7o"]
particle_flag_align_y = true
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(200, 0, 0)
direction = Vector3(0, 1, 0)
spread = 25.0
initial_velocity_min = 20.46
initial_velocity_max = 75.0
gravity = Vector3(0, 0, 0)
scale_min = 2.0
scale_max = 3.0
scale_curve = SubResource("CurveTexture_lj8t0")
turbulence_noise_strength = 0.0
turbulence_noise_scale = 0.0
turbulence_noise_speed_random = 0.0
turbulence_influence_min = 0.0
turbulence_influence_max = 0.01

[sub_resource type="AtlasTexture" id="AtlasTexture_n48l0"]
atlas = ExtResource("3_x5a02")
region = Rect2(128, 80, 16, 16)

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_dxhkg"]
random_pitch = 2.0
streams_count = 14
stream_0/stream = ExtResource("8_mxerh")
stream_1/stream = ExtResource("9_nkbgo")
stream_2/stream = ExtResource("10_rsb7j")
stream_3/stream = ExtResource("11_v3eec")
stream_4/stream = ExtResource("12_3r8i4")
stream_5/stream = ExtResource("13_adlyo")
stream_6/stream = ExtResource("18_dk3yd")
stream_7/stream = ExtResource("19_5f5nl")
stream_8/stream = ExtResource("20_khsg4")
stream_9/stream = ExtResource("21_d55de")
stream_10/stream = ExtResource("10_j2eln")
stream_11/stream = ExtResource("11_e7eiq")
stream_12/stream = ExtResource("12_s351w")
stream_13/stream = ExtResource("13_robx6")

[sub_resource type="SegmentShape2D" id="SegmentShape2D_cf30l"]
a = Vector2(-9.75, -0.333333)
b = Vector2(6.25, -0.333333)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_t8rro"]
a = Vector2(-9.75, -0.333333)
b = Vector2(14.2669, -0.352069)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_exst0"]
size = Vector2(6.25, 8.5)

[node name="Game" type="Node2D" node_paths=PackedStringArray("player", "tilemaps", "ui")]
material = ExtResource("1_m4v0b")
use_parent_material = true
scale = Vector2(12, 12)
script = ExtResource("2_viod6")
player = NodePath("Miner")
tilemaps = NodePath("Tilemaps")
ui = NodePath("OnScreenUi")

[node name="Tilemaps" type="Node2D" parent="." node_paths=PackedStringArray("game_manager", "player", "tiles", "rock_outline", "foreground", "break_progress")]
use_parent_material = true
script = ExtResource("2_c7mqw")
game_manager = NodePath("..")
player = NodePath("../Miner")
tiles = NodePath("Tiles")
rock_outline = NodePath("RockOutline")
foreground = NodePath("Foreground")
break_progress = NodePath("BreakProgress")
ore_noise = SubResource("FastNoiseLite_8jmxf")
ore_threshold = 0.3
ice_noise = SubResource("FastNoiseLite_uhi1g")
ice_threshold = 0.2
cave_noise = SubResource("FastNoiseLite_ghgpf")
cave_threshold = -0.5

[node name="Tiles" type="TileMapLayer" parent="Tilemaps"]
use_parent_material = true
tile_map_data = PackedByteArray("AAADAAAAAAACAAAAAAAEAAAAAAACAAEAAAAFAAAAAAAAAAEAAAAGAAAAAAAAAAEAAAAHAAAAAAAAAAEAAAAIAAAAAAACAAEAAAAJAAAAAAABAAAAAAAKAAAAAAACAAEAAAALAAAAAAAAAAEAAAAMAAAAAAACAAAAAAADAAEAAAACAAAAAAADAAIAAAACAAEAAAADAAMAAAAAAAAAAAADAAQAAAACAAAAAAADAAUAAAAAAAEAAAAEAAEAAAAAAAEAAAAEAAIAAAAAAAAAAAAEAAMAAAABAAEAAAAEAAQAAAACAAEAAAAEAAUAAAABAAEAAAAFAAEAAAABAAEAAAAFAAIAAAABAAAAAAAFAAMAAAAAAAEAAAAFAAQAAAAAAAMAAAAFAAUAAAABAAAAAAAGAAEAAAABAAAAAAAGAAIAAAAAAAEAAAAGAAMAAAABAAEAAAAGAAQAAAABAAEAAAAGAAUAAAAAAAEAAAAHAAEAAAABAAEAAAAHAAIAAAAAAAMAAAAHAAMAAAACAAEAAAAHAAQAAAACAAAAAAAHAAUAAAAAAAEAAAAIAAEAAAACAAAAAAAIAAIAAAAAAAEAAAAIAAMAAAABAAAAAAAIAAQAAAABAAAAAAAIAAUAAAACAAEAAAAJAAEAAAAAAAEAAAAJAAIAAAAAAAAAAAAJAAMAAAAAAAEAAAAJAAQAAAABAAAAAAAJAAUAAAABAAEAAAAKAAEAAAAAAAEAAAAKAAIAAAACAAEAAAAKAAMAAAABAAEAAAAKAAQAAAACAAAAAAAKAAUAAAABAAAAAAALAAEAAAAAAAAAAAALAAIAAAABAAAAAAALAAMAAAACAAAAAAALAAQAAAABAAMAAAALAAUAAAACAAAAAAAMAAEAAAAAAAAAAAAMAAIAAAACAAEAAAAMAAMAAAABAAEAAAAMAAQAAAACAAEAAAAMAAUAAAABAAEAAAANAAAAAAAAAAAAAAANAAEAAAABAAAAAAANAAIAAAAAAAMAAAANAAMAAAACAAAAAAANAAQAAAACAAEAAAANAAUAAAAAAAAAAAAOAAAAAAAFAAQAAAAOAAEAAAAFAAQAAAAOAAIAAAAGAAQAAAAOAAMAAAAGAAQAAAAOAAQAAAACAAEAAAAOAAUAAAAAAAAAAAADAAYAAAABAAAAAAADAAcAAAAAAAEAAAADAAgAAAACAAAAAAADAAkAAAACAAAAAAAEAAYAAAAAAAEAAAAEAAcAAAACAAEAAAAEAAgAAAAAAAEAAAAEAAkAAAACAAEAAAAFAAYAAAAAAAAAAAAFAAcAAAABAAAAAAAFAAgAAAAAAAAAAAAFAAkAAAACAAEAAAAGAAYAAAACAAEAAAAGAAcAAAAAAAMAAAAGAAgAAAAAAAAAAAAGAAkAAAACAAAAAAAHAAYAAAABAAEAAAAHAAcAAAACAAEAAAAHAAgAAAAAAAEAAAAHAAkAAAABAAAAAAAIAAYAAAAAAAAAAAAIAAcAAAAAAAEAAAAIAAgAAAACAAAAAAAIAAkAAAAAAAAAAAAJAAYAAAACAAAAAAAJAAcAAAACAAEAAAAJAAgAAAACAAEAAAAJAAkAAAAAAAAAAAAKAAYAAAACAAAAAAAKAAcAAAACAAEAAAAKAAgAAAAAAAEAAAAKAAkAAAABAAEAAAALAAYAAAABAAAAAAALAAcAAAAAAAQAAAALAAgAAAAAAAYAAAALAAkAAAABAAYAAAAMAAYAAAAAAAMAAAAMAAcAAAAAAAUAAAAMAAgAAAABAAQAAAAMAAkAAAACAAYAAAANAAYAAAABAAEAAAANAAcAAAAAAAYAAAANAAgAAAAJAAQAAAANAAkAAAAAAAUAAAAOAAYAAAABAAEAAAAOAAcAAAABAAQAAAAOAAgAAAAJAAQAAAAOAAkAAAABAAYAAAAPAAAAAAABAAAAAAAPAAEAAAACAAEAAAAPAAIAAAAGAAQAAAAPAAMAAAAGAAQAAAAPAAQAAAAHAAQAAAAPAAUAAAACAAEAAAAPAAYAAAABAAAAAAAPAAcAAAAJAAQAAAAPAAgAAAAJAAQAAAAPAAkAAAACAAUAAAAQAAAAAAAJAAcAAAAQAAEAAAAIAAYAAAAQAAIAAAAJAAcAAAAQAAMAAAAAAAMAAAAQAAQAAAAHAAQAAAAQAAUAAAAIAAQAAAAQAAYAAAAJAAQAAAAQAAcAAAAJAAQAAAAQAAgAAAAJAAQAAAAQAAkAAAACAAUAAAARAAAAAAAJAAcAAAARAAEAAAAIAAYAAAARAAIAAAAJAAYAAAARAAMAAAABAAAAAAARAAQAAAACAAEAAAARAAUAAAABAAEAAAARAAYAAAABAAAAAAARAAcAAAABAAMAAAARAAgAAAABAAAAAAARAAkAAAACAAAAAAASAAAAAAAJAAYAAAASAAEAAAAIAAcAAAASAAIAAAAJAAYAAAASAAMAAAAIAAYAAAASAAQAAAACAAEAAAASAAUAAAACAAEAAAASAAYAAAACAAEAAAASAAcAAAAAAAAAAAASAAgAAAAAAAAAAAASAAkAAAABAAEAAAATAAAAAAAJAAYAAAATAAEAAAAIAAcAAAATAAIAAAAIAAYAAAAUAAAAAAAIAAcAAAAUAAEAAAAIAAcAAAAUAAIAAAAJAAYAAAAVAAAAAAAJAAYAAAAVAAEAAAAIAAcAAAAVAAIAAAAJAAcAAAAWAAAAAAAIAAYAAAAWAAEAAAAIAAcAAAAWAAIAAAAJAAcAAAATAAMAAAAIAAYAAAAUAAMAAAAIAAYAAAAVAAMAAAAJAAcAAAAVAAQAAAAIAAcAAAAWAAQAAAAJAAYAAAAWAAMAAAAJAAcAAAAXAAMAAAAJAAcAAAAXAAQAAAAIAAcAAAAVAAYAAAAJAAYAAAAWAAYAAAAJAAYAAAAXAAYAAAAJAAYAAAAUAAcAAAAJAAcAAAAVAAcAAAAJAAcAAAALAAoAAAACAAQAAAAMAAoAAAABAAYAAAANAAoAAAAAAAUAAAAOAAoAAAABAAQAAAAPAAoAAAABAAUAAAAQAAoAAAAAAAYAAAATAAQAAAAAAAEAAAATAAUAAAACAAAAAAATAAYAAAAAAAAAAAAUAAQAAAAAAAEAAAAUAAUAAAACAAAAAAAUAAYAAAABAAEAAAAVAAUAAAACAAAAAAAWAAUAAAAAAAAAAAAXAAUAAAABAAAAAAAYAAUAAAABAAAAAAAYAAAAAAACAAAAAAAYAAEAAAACAAEAAAAYAAIAAAACAAAAAAAYAAMAAAAAAAEAAAAYAAQAAAAAAAAAAAAYAAYAAAACAAAAAAAZAAAAAAAAAAAAAAAZAAEAAAACAAEAAAAZAAIAAAAAAAAAAAAZAAMAAAAAAAEAAAAZAAQAAAACAAEAAAAZAAUAAAAAAAEAAAAZAAYAAAABAAAAAAAaAAAAAAABAAEAAAAaAAEAAAAAAAEAAAAaAAIAAAAAAAAAAAAaAAMAAAABAAEAAAAaAAQAAAACAAEAAAAaAAUAAAAAAAAAAAAaAAYAAAACAAEAAAAXAAAAAAACAAEAAAAXAAEAAAABAAAAAAAXAAIAAAABAAAAAAAKAP3/AAAEAAQAAAAKAP7/AAAEAAQAAAAKAP//AAAEAAQAAAALAP3/AAAEAAQAAAALAP7/AAAEAAQAAAALAP//AAAEAAQAAAAMAP3/AAAEAAQAAAAMAP7/AAAEAAQAAAAMAP//AAAEAAQAAAANAP3/AAAEAAQAAAANAP7/AAAEAAQAAAANAP//AAAEAAQAAAAOAP3/AAAEAAQAAAAOAP7/AAAEAAQAAAAOAP//AAAEAAQAAAAPAP3/AAAEAAQAAAAPAP7/AAAEAAQAAAAPAP//AAAEAAQAAAAQAP3/AAAEAAQAAAAQAP7/AAAEAAQAAAAQAP//AAAEAAQAAAARAP3/AAAEAAQAAAARAP7/AAAEAAQAAAARAP//AAAEAAQAAAASAP3/AAAEAAQAAAASAP7/AAAEAAQAAAASAP//AAAEAAQAAAATAP3/AAAEAAQAAAATAP7/AAAEAAQAAAATAP//AAAEAAQAAAAUAP3/AAAEAAQAAAAUAP7/AAAEAAQAAAAUAP//AAAEAAQAAAAVAP3/AAAEAAQAAAAVAP7/AAAEAAQAAAAVAP//AAAEAAQAAAAWAP3/AAAEAAQAAAAWAP7/AAAEAAQAAAAWAP//AAAEAAQAAAAXAP3/AAAEAAQAAAAXAP7/AAAEAAQAAAAXAP//AAAEAAQAAAAYAP3/AAAEAAQAAAAYAP7/AAAEAAQAAAAYAP//AAAEAAQAAAAZAP3/AAAEAAQAAAAZAP7/AAAEAAQAAAAZAP//AAAEAAQAAAA=")
tile_set = ExtResource("1_4ogtq")

[node name="RockOutline" type="TileMapLayer" parent="Tilemaps"]
use_parent_material = true
tile_set = ExtResource("1_4ogtq")

[node name="Foreground" type="TileMapLayer" parent="Tilemaps"]
use_parent_material = true
tile_map_data = PackedByteArray("AAABAP3/AAAKAAUAAAABAP7/AAAKAAYAAAABAP//AAAKAAcAAAACAP3/AAALAAUAAAACAP7/AAALAAYAAAACAP//AAALAAcAAAADAP3/AAAMAAUAAAADAP7/AAAMAAYAAAADAP//AAAMAAcAAAAGAP//AAANAAcAAAAHAP//AAAOAAcAAAA=")
tile_set = ExtResource("1_4ogtq")

[node name="BreakProgress" type="TileMapLayer" parent="Tilemaps"]
use_parent_material = true
tile_set = ExtResource("1_4ogtq")

[node name="Miner" parent="." instance=ExtResource("1_8xi8i")]
position = Vector2(40, -4.2)
metadata/_edit_group_ = true

[node name="Camera2D" type="Camera2D" parent="Miner"]
use_parent_material = true
limit_left = -135
position_smoothing_enabled = true
drag_horizontal_enabled = true
drag_left_margin = 0.1
drag_top_margin = 0.6
drag_bottom_margin = 0.0
editor_draw_limits = true
editor_draw_drag_margin = true
script = ExtResource("6_2kbk2")

[node name="CPUParticles2D" type="GPUParticles2D" parent="Miner/Camera2D"]
use_parent_material = true
position = Vector2(-1, -90)
amount = 400
process_material = SubResource("ParticleProcessMaterial_onh7o")
texture = SubResource("AtlasTexture_n48l0")
lifetime = 4.0
fixed_fps = 0
draw_order = 0

[node name="Ambiance" type="AudioStreamPlayer" parent="Miner"]
stream = SubResource("AudioStreamRandomizer_dxhkg")
script = ExtResource("14_o84u8")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
visible = false
use_parent_material = true
offset_left = 38.0
offset_top = 13.0
offset_right = 318.0
offset_bottom = 123.0
scale = Vector2(0.25, 0.25)
bbcode_enabled = true
text = "[font=res://font/PixelOperator.ttf][color=black][font_size=]The cart is [font=res://font/PixelOperatorHB.ttf]FROZEN SOLID[/font]. I guess i will have to use my trusty old pick.
"
metadata/_edit_use_anchors_ = true

[node name="OnScreenUi" parent="." instance=ExtResource("6_g0thl")]

[node name="StaticBody2D2" type="StaticBody2D" parent="."]
use_parent_material = true
position = Vector2(57.75, -7)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D2"]
use_parent_material = true
shape = SubResource("SegmentShape2D_cf30l")
one_way_collision = true

[node name="StaticBody2D" type="StaticBody2D" parent="."]
use_parent_material = true
position = Vector2(17.6498, -13.5646)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
use_parent_material = true
shape = SubResource("SegmentShape2D_t8rro")
one_way_collision = true

[node name="Node2D" type="Node2D" parent="."]
script = ExtResource("8_pyqyd")

[node name="Camera2D" type="Camera2D" parent="Node2D"]
enabled = false
zoom = Vector2(0.25, 0.25)

[node name="Trigger" parent="." node_paths=PackedStringArray("target") instance=ExtResource("10_7k8s7")]
target = NodePath("../Miner")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Trigger"]
position = Vector2(-112, -80.4167)
shape = SubResource("RectangleShape2D_exst0")

[connection signal="tile_breaking" from="Tilemaps" to="Tilemaps" method="_on_tile_breaking"]
[connection signal="tile_broken" from="Tilemaps" to="Tilemaps" method="_on_tile_broken"]
[connection signal="target_entered" from="Trigger" to="." method="_on_trigger_target_entered"]
